--- a/Platforms/MacCatalyst/Info.plist
+++ b/Platforms/MacCatalyst/Info.plist
@@ -11,6 +11,13 @@
     <!-- Please consult https://developer.apple.com/documentation/bundleresources/information_property_list/lsapplicationcategorytype -->
     <!-- <key>LSApplicationCategoryType</key> -->
     <!-- <string>public.app-category.YOUR-CATEGORY-HERE</string> -->
+	<key>CFBundleName</key>
+	<string>SkelPoss</string>
+
+	<key>CFBundleDisplayName</key>
+	<string>SkelPoss</string>
+
+
 	<key>UIDeviceFamily</key>
 	<array>
 		<integer>2</integer>
