fixed news parsing

--- a/SkelAppliences.csproj
+++ b/SkelAppliences.csproj
@@ -59,6 +59,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="BotScripts\news_parser.py" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Content Include="BotScripts\news_parser.py">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </Content>
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
