--- a/TechnoPoss.csproj
+++ b/TechnoPoss.csproj
@@ -14,17 +14,19 @@
 		<!-- For example: <RuntimeIdentifiers>maccatalyst-x64;maccatalyst-arm64</RuntimeIdentifiers> -->
 
 		<OutputType>Exe</OutputType>
-		<RootNamespace>SkelAppliences</RootNamespace>
+		<RootNamespace>TechnoPoss</RootNamespace>
 		<UseMaui>true</UseMaui>
 		<SingleProject>true</SingleProject>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 
 		<!-- Display name -->
-		<ApplicationTitle>SkelAppliences</ApplicationTitle>
+		<ApplicationTitle>TechnoPoss</ApplicationTitle>
+
+		<GeneratedNamespace>TechnoPoss.WinUI</GeneratedNamespace>
 
 		<!-- App Identifier -->
-		<ApplicationId>com.companyname.skelappliences</ApplicationId>
+		<ApplicationId>com.companyname.technoposs</ApplicationId>
 
 		<!-- Versions -->
 		<ApplicationDisplayVersion>1.0</ApplicationDisplayVersion>
