--- a/Platforms/iOS/Info.plist
+++ b/Platforms/iOS/Info.plist
@@ -30,6 +30,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	
+	<key>NSMicrophoneUsageDescription</key>
+	<string>We need microphone access to record audio.</string>
+
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
 	<key>NSAppTransportSecurity</key>
