added developers page

--- a/TechnoPoss.csproj
+++ b/TechnoPoss.csproj
@@ -73,12 +73,18 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <Compile Update="AboutPage.xaml.cs">
+	    <DependentUpon>AboutPage.xaml</DependentUpon>
+	  </Compile>
 	  <Compile Update="NewsPage.xaml.cs">
 	    <DependentUpon>NewsPage.xaml</DependentUpon>
 	  </Compile>
 	</ItemGroup>
 
 	<ItemGroup>
+	  <MauiXaml Update="AboutPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="NewsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
