--- a/TechnoPoss.csproj
+++ b/TechnoPoss.csproj
@@ -2,13 +2,13 @@
 
 	<PropertyGroup>
 		<!-- винда -->
-		<TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst;</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
+		<!-- <TargetFrameworks>net8.0-android;net8.0-ios;net8.0-maccatalyst;</TargetFrameworks>
+		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks> -->
 
 		<!-- мак -->
-		<!-- <TargetFramework>net8.0-maccatalyst</TargetFramework>
+		<TargetFramework>net8.0-maccatalyst</TargetFramework>
 		<TargetFrameworks>net8.0-ios;net8.0-maccatalyst;</TargetFrameworks>
-		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks> -->
+		<TargetFrameworks Condition="$([MSBuild]::IsOSPlatform('windows'))">$(TargetFrameworks);net8.0-windows10.0.19041.0</TargetFrameworks>
 
 
 		<OutputType>Exe</OutputType>
